force-app/main/default/objects/custom_create251__c/custom_create251__c.object-meta.xml
<CustomObject>
    <label>Custom created object251</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects251</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>