force-app/main/default/objects/custom_create251__c/fields/custom_create_251field509__c.field-meta.xml
<CustomField>
    <fullName>custom_create_251field509__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 251field509</label>
    <type>Checkbox</type>
</CustomField>